--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,7 @@ defaults:
       type: pages
     values:
       layout: single
+      classes: wide
       author_profile: true
       show_date: true
 
